--- a/N-Body/N-Body.vcxproj
+++ b/N-Body/N-Body.vcxproj
@@ -86,6 +86,9 @@
   <ItemGroup>
     <ClCompile Include="VisualMain.cpp" />
   </ItemGroup>
+  <ItemGroup>
+    <Text Include="..\..\..\..\..\..\..\Descargas\coords.txt" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
     <Import Project="$(VCTargetsPath)\BuildCustomizations\CUDA 12.0.targets" />
